--- a/app/views/spree/static_content/_static_content_list.html.erb
+++ b/app/views/spree/static_content/_static_content_list.html.erb
@@ -1,6 +1,6 @@
 <% if page.foreign_link.present? %>
-  <li><%= link_to page.title, page.foreign_link, target: '_blank', rel: 'nofollow' %></li>
+  <li class="menu-item"><%= link_to page.title, page.foreign_link, target: '_blank', rel: 'nofollow', class: 'nav-link'%></li>
 <% else %>
   <% page_uri = Rails.application.routes.named_routes[:spree].path.spec.to_s == '/' ? page.slug : Rails.application.routes.named_routes[:spree].path.spec.to_s + page.slug %>
-  <li class="<%= 'current' if (request.fullpath.gsub('//','/') == page_uri) %>"><%= link_to page.title, page_uri %></li>
+  <li class="<%= 'current' if (request.fullpath.gsub('//','/') == page_uri) %>"><%= link_to page.title, page_uri, class: 'nav-link' %></li>
 <% end %>
