--- a/app/views/spree/static_content/show.html.erb
+++ b/app/views/spree/static_content/show.html.erb
@@ -11,16 +11,44 @@
     <meta name="description" content="<%= @page.meta_description %>">
   <% end -%>
 
-  <% content_for :sidebar do %>
-    <% if (defined?(@products) && @products) && (defined?(@taxon) && @taxon) %>
-      <%= render partial: 'spree/shared/filters' %>
-    <% elsif defined?(@taxonomies) && @taxonomies %>
-      <%= render partial: 'spree/shared/taxonomies' %>
-    <% end %>
-  <% end %>
+<div class="main-content main-content-blog single left-sidebar">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="breadcrumb-trail breadcrumbs">
+            <ul class="trail-items breadcrumb">
+              <li class="trail-item trail-begin">
+                <%= link_to Spree.t(:home), spree.root_path %>
+              </li>
+              <li class="trail-item trail-end active">
+                <%= @page.title %>
+              </li>
+            </ul>
+          </div>
+      </div>
+    </div>
+   
+    <div class="row">
 
-  <h1><%= @page.title %></h1>
-  <div id="page_content">
-    <%= raw @page.body %>
+        <div class="content-area content-blog col-lg-9 col-md-8 col-sm-12 col-xs-12">
+          <div class="site-main">
+            <h3 class="custom_blog_title">
+              <%= @page.title %>
+            </h3>
+              <div class="page-main-content" id="page_content">
+                <%= raw @page.body %> 
+              </div>
+
+          </div>
+        </div>
+
+          <div class="sidebar sidebar-single-blog col-lg-3 col-md-4 col-sm-12 col-xs-12">
+          <div class="wrapper-sidebar">
+             <%= render partial: 'spree/static_content/static_content_sidebar' %>
+          </div>
+        </div>
+        
+      </div>
   </div>
+</div>
 <% end %>
